--- a/src/project.css
+++ b/src/project.css
@@ -597,12 +597,40 @@ video {
   margin: auto;
 }
 
-.mt-\[32px\] {
-  margin-top: 32px;
+.m-2 {
+  margin: 0.5rem;
 }
 
-.mb-\[32px\] {
-  margin-bottom: 32px;
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[100px\] {
+  margin-bottom: 100px;
 }
 
 .flex {
@@ -617,44 +645,48 @@ video {
   min-height: 171px;
 }
 
-.w-full {
-  width: 100%;
+.min-h-\[144px\] {
+  min-height: 144px;
 }
 
-.w-\[171px\] {
-  width: 171px;
+.w-full {
+  width: 100%;
 }
 
 .w-\[174px\] {
   width: 174px;
 }
 
-.min-w-full {
-  min-width: 100%;
+.min-w-\[192px\] {
+  min-width: 192px;
 }
 
 .min-w-\[1024px\] {
   min-width: 1024px;
 }
 
+.min-w-\[575px\] {
+  min-width: 575px;
+}
+
+.max-w-\[86rem\] {
+  max-width: 86rem;
+}
+
+.max-w-\[420px\] {
+  max-width: 420px;
+}
+
 .max-w-7xl {
   max-width: 80rem;
-}
-
-.max-w-\[192\] {
-  max-width: 192;
-}
-
-.max-w-\[192px\] {
-  max-width: 192px;
 }
 
 .max-w-5xl {
   max-width: 64rem;
 }
 
-.flex-col {
-  flex-direction: column;
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .flex-wrap {
@@ -677,9 +709,40 @@ video {
   border-radius: 4px;
 }
 
+.bg-\[\#E8EFF5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 239 245 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D8E1EA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 225 234 / var(--tw-bg-opacity));
+}
+
+.bg-inherit {
+  background-color: inherit;
+}
+
+.bg-\[\#2A79CC\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 121 204 / var(--tw-bg-opacity));
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
 }
 
 .pt-\[32px\] {
@@ -690,24 +753,16 @@ video {
   padding-bottom: 32px;
 }
 
-.pr-1 {
-  padding-right: 0.25rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
+.pr-16 {
+  padding-right: 4rem;
 }
 
 .pr-5 {
   padding-right: 1.25rem;
 }
 
-.pr-16 {
-  padding-right: 4rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .pt-7 {
@@ -718,10 +773,87 @@ video {
   padding-right: 1rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.pt-\[11px\] {
+  padding-top: 11px;
 }
 
-.font-normal {
-  font-weight: 400;
+.pb-\[11px\] {
+  padding-bottom: 11px;
+}
+
+.pr-\[24px\] {
+  padding-right: 24px;
+}
+
+.pl-\[24px\] {
+  padding-left: 24px;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-\[65px\] {
+  font-size: 65px;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
