--- a/src/project.css
+++ b/src/project.css
@@ -601,6 +601,10 @@ video {
   margin: 0.5rem;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mt-40 {
   margin-top: 10rem;
 }
@@ -621,16 +625,20 @@ video {
   margin-right: 2rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mb-\[100px\] {
+  margin-bottom: 100px;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
-.mb-\[100px\] {
-  margin-bottom: 100px;
+.mt-\[55px\] {
+  margin-top: 55px;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .flex {
@@ -639,6 +647,10 @@ video {
 
 .h-\[56px\] {
   height: 56px;
+}
+
+.h-\[400px\] {
+  height: 400px;
 }
 
 .min-h-\[171px\] {
@@ -689,6 +701,26 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[450px\] {
+  max-width: 450px;
+}
+
+.max-w-\[315px\] {
+  max-width: 315px;
+}
+
+.max-w-\[426px\] {
+  max-width: 426px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -707,6 +739,23 @@ video {
 
 .rounded-\[4px\] {
   border-radius: 4px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.border-t-\[1px\] {
+  border-top-width: 1px;
+}
+
+.border-none {
+  border-style: none;
+}
+
+.border-\[\#878C9E\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(135 140 158 / var(--tw-border-opacity));
 }
 
 .bg-\[\#E8EFF5\] {
@@ -733,12 +782,25 @@ video {
   background-color: rgb(42 121 204 / var(--tw-bg-opacity));
 }
 
+.bg-\[2D4057\] {
+  background-color: 2D4057;
+}
+
+.bg-\[\#2D4057\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 64 87 / var(--tw-bg-opacity));
+}
+
 .p-8 {
   padding: 2rem;
 }
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-\[11px\] {
+  padding: 11px;
 }
 
 .pl-8 {
@@ -789,16 +851,36 @@ video {
   padding-left: 24px;
 }
 
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pt-\[100px\] {
+  padding-top: 100px;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
+.pt-\[60px\] {
+  padding-top: 60px;
+}
+
+.pt-\[25px\] {
+  padding-top: 25px;
+}
+
+.pb-\[100px\] {
+  padding-bottom: 100px;
+}
+
+.pb-\[80px\] {
+  padding-bottom: 80px;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
 }
 
 .text-\[40px\] {
@@ -820,22 +902,26 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[65px\] {
+  font-size: 65px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-\[65px\] {
-  font-size: 65px;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .text-black {
@@ -851,6 +937,11 @@ video {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-\[\#878C9E\] {
+  --tw-text-opacity: 1;
+  color: rgb(135 140 158 / var(--tw-text-opacity));
 }
 
 .outline-none {
