--- a/src/project.css
+++ b/src/project.css
@@ -601,10 +601,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-1 {
-  margin: 0.25rem;
-}
-
 .mt-40 {
   margin-top: 10rem;
 }
@@ -621,6 +617,14 @@ video {
   margin-bottom: 2rem;
 }
 
+.mt-\[55px\] {
+  margin-top: 55px;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -633,24 +637,28 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mt-\[55px\] {
-  margin-top: 55px;
+.mt-8 {
+  margin-top: 2rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .flex {
   display: flex;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
 .h-\[56px\] {
   height: 56px;
 }
 
-.h-\[400px\] {
-  height: 400px;
+.max-h-\[170px\] {
+  max-height: 170px;
 }
 
 .min-h-\[171px\] {
@@ -689,6 +697,18 @@ video {
   max-width: 420px;
 }
 
+.max-w-\[450px\] {
+  max-width: 450px;
+}
+
+.max-w-\[315px\] {
+  max-width: 315px;
+}
+
+.max-w-\[426px\] {
+  max-width: 426px;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -701,16 +721,12 @@ video {
   max-width: 20rem;
 }
 
-.max-w-\[450px\] {
-  max-width: 450px;
+.max-w-\[588px\] {
+  max-width: 588px;
 }
 
-.max-w-\[315px\] {
-  max-width: 315px;
-}
-
-.max-w-\[426px\] {
-  max-width: 426px;
+.max-w-\[700px\] {
+  max-width: 700px;
 }
 
 .cursor-pointer {
@@ -763,14 +779,9 @@ video {
   background-color: rgb(232 239 245 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-\[\#2D4057\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#D8E1EA\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 225 234 / var(--tw-bg-opacity));
+  background-color: rgb(45 64 87 / var(--tw-bg-opacity));
 }
 
 .bg-inherit {
@@ -782,13 +793,14 @@ video {
   background-color: rgb(42 121 204 / var(--tw-bg-opacity));
 }
 
-.bg-\[2D4057\] {
-  background-color: 2D4057;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#2D4057\] {
+.bg-\[\#D8E1EA\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(45 64 87 / var(--tw-bg-opacity));
+  background-color: rgb(216 225 234 / var(--tw-bg-opacity));
 }
 
 .p-8 {
@@ -805,6 +817,30 @@ video {
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
+}
+
+.pt-\[60px\] {
+  padding-top: 60px;
+}
+
+.pt-\[25px\] {
+  padding-top: 25px;
+}
+
+.pr-\[24px\] {
+  padding-right: 24px;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pt-\[32px\] {
@@ -831,26 +867,6 @@ video {
   padding-top: 1.75rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
-}
-
-.pt-\[11px\] {
-  padding-top: 11px;
-}
-
-.pb-\[11px\] {
-  padding-bottom: 11px;
-}
-
-.pr-\[24px\] {
-  padding-right: 24px;
-}
-
-.pl-\[24px\] {
-  padding-left: 24px;
-}
-
 .pr-6 {
   padding-right: 1.5rem;
 }
@@ -859,51 +875,12 @@ video {
   padding-left: 1.5rem;
 }
 
-.pt-\[100px\] {
-  padding-top: 100px;
-}
-
-.pt-\[60px\] {
-  padding-top: 60px;
-}
-
-.pt-\[25px\] {
-  padding-top: 25px;
-}
-
-.pb-\[100px\] {
-  padding-bottom: 100px;
-}
-
-.pb-\[80px\] {
-  padding-bottom: 80px;
-}
-
-.pb-\[60px\] {
-  padding-bottom: 60px;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-\[40px\] {
   font-size: 40px;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-\[65px\] {
-  font-size: 65px;
 }
 
 .text-base {
@@ -916,12 +893,36 @@ video {
   line-height: 2.5rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-\[65px\] {
+  font-size: 65px;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-extrabold {
   font-weight: 800;
 }
 
-.font-light {
-  font-weight: 300;
+.uppercase {
+  text-transform: uppercase;
 }
 
 .text-black {
@@ -934,14 +935,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-\[\#878C9E\] {
   --tw-text-opacity: 1;
   color: rgb(135 140 158 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .outline-none {
