--- a/src/components/ProductComponent/Product.module.scss
+++ b/src/components/ProductComponent/Product.module.scss
@@ -181,6 +181,7 @@ $blue: #2A79CC;
         line-height: 21px;
         font-weight: 800;
         padding-bottom: 32px;
+        text-transform: uppercase;
         cursor: pointer;
         &_active {
             border-bottom: 2px solid $blue;
