--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,3 +32,32 @@
 
   }
 }
+
+.catalogitem {
+  background-color: #fff;
+  border-radius: 4px;
+  max-width: 174px;
+  padding: 16px 24px;
+  width: 100%;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 24px;
+  cursor: pointer;
+  &__active {
+    border: 2px solid #2A79CC;
+  }
+}
+
+.catalogtext {
+  font-weight: bold;
+  &__active {
+    color: #2A79CC;
+  }
+  
+}
+
+.imgfilter {
+  max-width: 18px;
+}
