--- a/src/pages/HeaderPages/Vacancy/Vacancy.module.scss
+++ b/src/pages/HeaderPages/Vacancy/Vacancy.module.scss
@@ -21,6 +21,7 @@
     &__head {
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
     }
     &__article {
         font-size: 24px;
