--- a/src/components/CatalogCategory/CatalogCategory.module.scss
+++ b/src/components/CatalogCategory/CatalogCategory.module.scss
@@ -4,11 +4,14 @@
     &__item {
         border: 1px solid #D8E1EA;
         padding: 32px;
+        width: 300px;
         &_img {
             text-align: center;
             margin: 0 auto;
             padding: 25px;
             padding-bottom: 100px;
+            width: 200px;
+            height: 200px;
         }
     }
     &__info {
