--- a/src/components/ProductComponent/Ask/Ask.module.scss
+++ b/src/components/ProductComponent/Ask/Ask.module.scss
@@ -15,7 +15,8 @@
     }
     &__right {
         width: 100%;
-        max-width: 312px;
+        max-width: 312px; 
+        height: 100%;
         border: 1px solid #D8E1EA;
         padding: 32px;
         border-radius: 4px;
