Feat: Cart Func

--- a/src/components/CartComponent/CartComponent.module.scss
+++ b/src/components/CartComponent/CartComponent.module.scss
@@ -9,6 +9,9 @@
             text-transform: uppercase;
         }
     }
+    &__imgcart {
+        max-width: 200px;
+    }
     &__trashes {
         display: flex;
         gap: 8px;
