--- a/src/components/ProductComponent/Product.module.scss
+++ b/src/components/ProductComponent/Product.module.scss
@@ -167,6 +167,7 @@ $blue: #2A79CC;
         text-align: center;
         background-color: $blue;
         text-transform: uppercase;
+        cursor: pointer;
     }
 }
 
